--- a/Index.html
+++ b/Index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/mscomGrid.css">
+    <!-- TEST -->
     <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
