--- a/Index.html
+++ b/Index.html
@@ -8,14 +8,13 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>MSCOM Grid</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/mscomGrid.css">
-    <!-- TEST -->
     <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
