--- a/Index.html
+++ b/Index.html
@@ -900,7 +900,7 @@
         </section>
 
         <section class="row">
-        <h1>Media queries and column breakdown chart</h1>
+        <h1>Media Queries and column breakdown chart</h1>
             <table class="mediaQTable">
                 <thead>
                     <tr>
