Putting vertical spacing back onto columns

--- a/Index.html
+++ b/Index.html
@@ -802,35 +802,29 @@
             No margin and not contained in single column
         </h4>
         <section class="row light-gray centered">
-            <div class="col-1-3 no-col-margin">
+            <div class="col-1-3 no-hcol-margin">
                 <div class="colNum purple">1/3</div>
-                <h3>Header three</h3>
             </div>
-            <div class="col-1-3 no-col-margin">
+            <div class="col-1-3 no-hcol-margin">
                 <div class="colNum purple">2/3</div>
-                <h3>Header three</h3>
             </div>
-            <div class="col-1-3 no-col-margin">
+            <div class="col-1-3 no-hcol-margin">
                 <div class="colNum purple">3/3</div>
-                <h3>Header three</h3>
             </div>
         </section>
         <h4>
             No margin and contained in single column
         </h4>
         <section class="row light-gray centered">
-            <div class="col-1-1">
-                <div class="col-1-3 no-col-margin">
+            <div class="col-1-1 no-vcol-margin">
+                <div class="col-1-3 no-hcol-margin">
                     <div class="colNum purple">1/3</div>
-                    <h3>Header three</h3>
                 </div>
-                <div class="col-1-3 no-col-margin">
+                <div class="col-1-3 no-hcol-margin">
                     <div class="colNum purple">2/3</div>
-                    <h3>Header three</h3>
                 </div>
-                <div class="col-1-3 no-col-margin">
+                <div class="col-1-3 no-hcol-margin">
                     <div class="colNum purple">3/3</div>
-                    <h3>Header three</h3>
                 </div>
             </div>
         </section>
@@ -838,43 +832,35 @@
             Fixed margin (3px) and not contained in single column
         </h4>
         <section class="row light-gray centered">
-            <div class="col-1-4 fixed-col-margin">
+            <div class="col-1-4 fixed-hcol-margin">
                 <div class="colNum cyan">1/4</div>
-                <h4>Header four</h4>
             </div>
-            <div class="col-1-4 fixed-col-margin">
+            <div class="col-1-4 fixed-hcol-margin">
                 <div class="colNum cyan">2/4</div>
-                <h4>Header four</h4>
             </div>
-            <div class="col-1-4 fixed-col-margin">
+            <div class="col-1-4 fixed-hcol-margin">
                 <div class="colNum cyan">3/4</div>
-                <h4>Header four</h4>
             </div>
-            <div class="col-1-4 fixed-col-margin">
+            <div class="col-1-4 fixed-hcol-margin">
                 <div class="colNum cyan">4/4</div>
-                <h4>Header four</h4>
             </div>
         </section>
         <h4>
             Fixed margin (3px) and contained in single column
         </h4>
         <section class="row light-gray centered">
-            <div class="col-1-1">
-                <div class="col-1-4 fixed-col-margin">
+            <div class="col-1-1 no-vcol-margin">
+                <div class="col-1-4 fixed-hcol-margin">
                     <div class="colNum cyan">1/4</div>
-                    <h4>Header four</h4>
                 </div>
-                <div class="col-1-4 fixed-col-margin">
+                <div class="col-1-4 fixed-hcol-margin">
                     <div class="colNum cyan">2/4</div>
-                    <h4>Header four</h4>
                 </div>
-                <div class="col-1-4 fixed-col-margin">
+                <div class="col-1-4 fixed-hcol-margin">
                     <div class="colNum cyan">3/4</div>
-                    <h4>Header four</h4>
                 </div>
-                <div class="col-1-4 fixed-col-margin">
+                <div class="col-1-4 fixed-hcol-margin">
                     <div class="colNum cyan">4/4</div>
-                    <h4>Header four</h4>
                 </div>
             </div>
         </section>
