--- a/Index.html
+++ b/Index.html
@@ -22,6 +22,7 @@
         <input type="button" value="Margin grid" class="marginGridToggle" />
         <input type="button" value="Toggle gridlines" class="gridlinesToggle" />
         <input type="button" value="Toggle headers" class="headersToggle" />
+        <input type="button" value="Toggle grid background" class="gridBackgroundToggle" />
         <a href="HPDemo.html">Homepage demo</a>
     </header>
     <section class="gridlines outside">
@@ -45,7 +46,7 @@
         </div>
     </section>
     <section class="grid fullGridDemo">
-        <section class="row light-gray ">
+        <section class="row  ">
             <div class="col-1-1">
                 <div class="colNum green">1/1</div>
                 <h1 class="text-center">
@@ -54,7 +55,7 @@
             </div>
         </section>
 
-        <section class="row light-gray ">
+        <section class="row  ">
             <div class="col-1-2">
                 <div class="colNum pink">1/2</div>
                 <h2 class="text-center">
@@ -69,7 +70,7 @@
             </div>
         </section>
 
-        <section class="row light-gray ">
+        <section class="row  ">
             <div class="col-1-2 nobreak">
                 <div class="colNum pink">1/2</div>
                 <h2 class="text-center">
@@ -84,7 +85,7 @@
             </div>
         </section>
 
-        <section class="row light-gray ">
+        <section class="row  ">
             <div class="col-1-3">
                 <div class="colNum purple">1/3</div>
                 <h3 class="text-center">Header three</h3>
@@ -99,7 +100,7 @@
             </div>
         </section>
 
-        <section class="row light-gray ">
+        <section class="row  ">
             <div class="col-1-3 nobreak">
                 <div class="colNum purple">1/3</div>
                 <h3 class="text-center">Header three (no break)</h3>
@@ -110,7 +111,7 @@
             </div>
         </section>
 
-        <section class="row light-gray ">
+        <section class="row  ">
             <div class="col-1-4 ">
                 <div class="colNum cyan">1/4</div>
                 <h4 class="text-center">Header four</h4>
@@ -129,7 +130,7 @@
             </div>
         </section>
 
-        <section class="row light-gray ">
+        <section class="row  ">
             <div class="col-1-4 nobreak">
                 <div class="colNum cyan">1/4</div>
                 <h4 class="text-center">Header four</h4>
@@ -148,7 +149,7 @@
             </div>
         </section>
 
-        <section class="row light-gray ">
+        <section class="row  ">
             <div class="col-2-4 ">
                 <div class="colNum cyan">2/4</div>
                 <h4 class="text-center">Header four</h4>
@@ -163,7 +164,7 @@
             </div>
         </section>
 
-        <section class="row light-gray ">
+        <section class="row  ">
             <div class="col-3-4 ">
                 <div class="colNum cyan">3/4</div>
                 <h4 class="text-center">Header four</h4>
@@ -174,7 +175,7 @@
             </div>
         </section>
 
-        <section class="row light-gray ">
+        <section class="row  ">
             <div class="col-1-5 ">
                 <div class="colNum purple">1/5</div>
             </div>
@@ -192,7 +193,7 @@
             </div>
         </section>
 
-        <section class="row light-gray ">
+        <section class="row  ">
             <div class="col-2-5 ">
                 <div class="colNum purple">2/5</div>
             </div>
@@ -207,7 +208,7 @@
             </div>
         </section>
 
-        <section class="row light-gray ">
+        <section class="row  ">
             <div class="col-1-5 ">
                 <div class="colNum purple">1/5</div>
             </div>
@@ -219,7 +220,7 @@
             </div>
         </section>
 
-        <section class="row light-gray ">
+        <section class="row  ">
             <div class="col-4-5 ">
                 <div class="colNum purple">4/5</div>
             </div>
@@ -228,7 +229,7 @@
             </div>
         </section>
 
-        <section class="row light-gray ">
+        <section class="row  ">
             <div class="col-1-6 ">
                 <div class="colNum orange">1/6</div>
             </div>
@@ -249,7 +250,7 @@
             </div>
         </section>
 
-        <section class="row light-gray ">
+        <section class="row  ">
             <div class="col-2-6 ">
                 <div class="colNum orange">2/6</div>
             </div>
@@ -267,7 +268,7 @@
             </div>
         </section>
 
-        <section class="row light-gray ">
+        <section class="row  ">
             <div class="col-3-6 ">
                 <div class="colNum orange">3/6</div>
             </div>
@@ -282,7 +283,7 @@
             </div>
         </section>
 
-        <section class="row light-gray ">
+        <section class="row  ">
             <div class="col-4-6 ">
                 <div class="colNum orange">4/6</div>
             </div>
@@ -294,7 +295,7 @@
             </div>
         </section>
 
-        <section class="row light-gray ">
+        <section class="row  ">
             <div class="col-1-8 ">
                 <div class="colNum teal">1/8</div>
             </div>
@@ -321,7 +322,7 @@
             </div>
         </section>
 
-        <section class="row light-gray ">
+        <section class="row  ">
             <div class="col-2-8 ">
                 <div class="colNum teal">2/8</div>
             </div>
@@ -345,7 +346,7 @@
             </div>
         </section>
 
-        <section class="row light-gray ">
+        <section class="row  ">
             <div class="col-4-8 ">
                 <div class="colNum teal">4/8</div>
             </div>
@@ -363,7 +364,7 @@
             </div>
         </section>
 
-        <section class="row light-gray ">
+        <section class="row  ">
             <div class="col-6-8 ">
                 <div class="colNum teal">6/8</div>
             </div>
@@ -375,7 +376,7 @@
             </div>
         </section>
 
-        <section class="row light-gray ">
+        <section class="row  ">
             <div class="col-6-8 ">
                 <div class="colNum teal">6/8</div>
             </div>
@@ -384,7 +385,7 @@
             </div>
         </section>
 
-        <section class="row light-gray ">
+        <section class="row  ">
             <div class="col-1-12 ">
                 <div class="colNum blue">1/12</div>
             </div>
@@ -422,7 +423,7 @@
                 <div class="colNum blue">12/12</div>
             </div>
         </section>
-        <section class="row light-gray ">
+        <section class="row  ">
             <div class="col-2-12 ">
                 <div class="colNum blue">1/12</div>
             </div>
@@ -458,7 +459,7 @@
             </div>
         </section>
 
-        <section class="row light-gray ">
+        <section class="row  ">
             <div class="col-4-12 ">
                 <div class="colNum blue">1/12</div>
             </div>
@@ -488,7 +489,7 @@
             </div>
         </section>
 
-        <section class="row light-gray ">
+        <section class="row  ">
             <div class="col-1-12 ">
                 <div class="colNum blue">3/12</div>
             </div>
@@ -524,7 +525,7 @@
             </div>
         </section>
 
-        <section class="row light-gray ">
+        <section class="row  ">
 
             <div class="col-1-12 ">
                 <div class="colNum blue">5/12</div>
@@ -555,7 +556,7 @@
             </div>
         </section>
 
-        <section class="row light-gray ">
+        <section class="row  ">
             <div class="col-1-16">
                 <div class="colNum red">1/16</div>
             </div>
@@ -606,7 +607,7 @@
             </div>
         </section>
 
-        <section class="row light-gray ">
+        <section class="row  ">
             <div class="col-2-16">
                 <div class="colNum red">1/16</div>
             </div>
@@ -654,7 +655,7 @@
             </div>
         </section>
 
-        <section class="row light-gray ">
+        <section class="row  ">
             <div class="col-4-16">
                 <div class="colNum red">1/16</div>
             </div>
@@ -696,7 +697,7 @@
             </div>
         </section>
 
-        <section class="row light-gray ">
+        <section class="row  ">
             <div class="col-8-16">
                 <div class="colNum red">1/16</div>
             </div>
@@ -726,7 +727,7 @@
             </div>
         </section>
 
-        <section class="row light-gray ">
+        <section class="row  ">
 
             <div class="col-1-16">
                 <div class="colNum red">3/16</div>
@@ -775,7 +776,7 @@
             </div>
         </section>
 
-        <section class="row light-gray ">
+        <section class="row  ">
 
             <div class="col-1-16">
                 <div class="colNum red">5/16</div>
@@ -818,7 +819,7 @@
             </div>
         </section>
 
-        <section class="row light-gray ">
+        <section class="row  ">
 
             <div class="col-1-16">
                 <div class="colNum red">9/16</div>
@@ -849,14 +850,14 @@
             </div>
         </section>
     </section>
-    <section class="grid">
+    <section class="grid extras">
         <h1>
             Other examples of possible behaviors
         </h1>
         <h4>
             No margin and not contained in single column
         </h4>
-        <section class="row light-gray ">
+        <section class="row  ">
             <div class="col-1-3 no-padding-horizontal">
                 <div class="colNum purple">1/3</div>
             </div>
@@ -870,7 +871,7 @@
         <h4>
             No margin and contained in single column
         </h4>
-        <section class="row light-gray ">
+        <section class="row  ">
             <div class="col-1-1 no-padding-vertical">
                 <div class="col-1-3 no-padding-horizontal">
                     <div class="colNum purple">1/3</div>
@@ -887,7 +888,7 @@
         <h4>
             Fixed margin (3px) and contained in single column
         </h4>
-        <section class="row light-gray ">
+        <section class="row  ">
             <div class="col-1-1 no-padding-vertical">
                 <div class="col-1-4 fixed-hcol-margin">
                     <div class="colNum cyan">1/4</div>
