Updating toggle buttons

--- a/Index.html
+++ b/Index.html
@@ -20,7 +20,7 @@
     <header>
         <input type="button" value="Full grid" class="fullGridToggle" />
         <input type="button" value="Margin grid" class="marginGridToggle" />
-        <input type="button" value="Fixed margin grid" class="fixedGridToggle" />
+        <input type="button" value="Toggle fixed margin" class="fixedGridToggle" />
         <input type="button" value="Toggle gridlines" class="gridlinesToggle" />
         <input type="button" value="Toggle headers" class="headersToggle" />
         <input type="button" value="Toggle grid background" class="gridBackgroundToggle" />
