Fixed and zero margin grid nesting fixes.
Also added nesting demo.

--- a/Index.html
+++ b/Index.html
@@ -986,6 +986,130 @@
     </section>
     <section class="grid extras">
         <h1>
+            Nesting
+        </h1>
+        <section class="row">
+            <div class="col-1-4">
+                <div class="colNum cyan"></div>
+            </div>
+            <div class="col-1-4">
+                <div class="cyan">
+                    <section class="row">
+                        <div class="col-1-6">
+                            <div class="colNum orange"></div>
+                        </div>
+                        <div class="col-1-6">
+                            <div class="colNum orange"></div>
+                        </div>
+                        <div class="col-1-6">
+                            <div class="colNum orange"></div>
+                        </div>
+                        <div class="col-1-6">
+                            <div class="colNum orange"></div>
+                        </div>
+                        <div class="col-1-6">
+                            <div class="colNum orange"></div>
+                        </div>
+                        <div class="col-1-6">
+                            <div class="colNum orange"></div>
+                        </div>
+                    </section>
+                </div>
+            </div>
+            <div class="col-1-4">
+                <div class="colNum cyan"></div>
+            </div>
+            <div class="col-1-4">
+                <div class="cyan">
+                    <section class="row">
+                        <div class="col-1-4">
+                            <div class="colNum green"></div>
+                        </div>
+                        <div class="col-1-4">
+                            <div class="colNum green"></div>
+                        </div>
+                        <div class="col-1-4">
+                            <div class="colNum green"></div>
+                        </div>
+                        <div class="col-1-4">
+                            <div class="colNum green"></div>
+                        </div>
+                    </section>
+                </div>
+            </div>
+        </section>
+        <section class="row">
+            <div class="col-1-2">
+                <div class="pink">
+                    <section class="row">
+                        <div class="col-1-4">
+                            <div class="colNum cyan"></div>
+                        </div>
+                        <div class="col-1-4">
+                            <div class="cyan">
+                                <section class="row">
+                                    <div class="col-1-3">
+                                        <div class="colNum purple"></div>
+                                    </div>
+                                    <div class="col-1-3">
+                                        <div class="colNum purple"></div>
+                                    </div>
+                                    <div class="col-1-3">
+                                        <div class="colNum purple"></div>
+                                    </div>
+                                </section>
+                            </div>
+                        </div>
+                        <div class="col-1-4">
+                            <div class="colNum cyan"></div>
+                        </div>
+                        <div class="col-1-4">
+                            <div class="cyan">
+                                <section class="row">
+                                    <div class="col-1-2">
+                                        <div class="colNum pink"></div>
+                                    </div>
+                                    <div class="col-1-2">
+                                        <div class="colNum pink"></div>
+                                    </div>
+                                </section>
+                            </div>
+                        </div>
+                    </section>
+                </div>
+            </div>
+            <div class="col-1-2">
+                <div class="pink">
+                    <section class="row">
+                        <div class="col-1-8">
+                            <div class="colNum teal"></div>
+                        </div>
+                        <div class="col-1-8">
+                            <div class="colNum teal"></div>
+                        </div>
+                        <div class="col-1-8">
+                            <div class="colNum teal"></div>
+                        </div>
+                        <div class="col-1-8">
+                            <div class="colNum teal"></div>
+                        </div>
+                        <div class="col-1-8">
+                            <div class="colNum teal"></div>
+                        </div>
+                        <div class="col-1-8">
+                            <div class="colNum teal"></div>
+                        </div>
+                        <div class="col-1-8">
+                            <div class="colNum teal"></div>
+                        </div>
+                        <div class="col-1-8">
+                            <div class="colNum teal"></div>
+                        </div>
+                    </section>
+                </div>
+            </div>
+        </section>
+        <h1>
             Other examples of possible behaviors
         </h1>
         <section class="row">
