Padding fallback fixes, offset demo adds/bug fix

--- a/Index.html
+++ b/Index.html
@@ -1110,6 +1110,39 @@
             </div>
         </section>
         <h1>
+            Offsets
+        </h1>
+        <section class="row">
+            <div class="col-1-4">
+                <div class="colNum cyan"></div>
+            </div>
+            <div class="col-1-4 m-col-4-offset-2">
+                <div class="colNum cyan"></div>
+            </div>
+        </section>
+        <section class="row">
+            <div class="col-1-6">
+                <div class="colNum orange"></div>
+            </div>
+            <div class="col-1-6 l-col-6-offset-2">
+                <div class="colNum orange"></div>
+            </div>
+            <div class="col-1-6 l-col-6-offset-1">
+                <div class="colNum orange"></div>
+            </div>
+        </section>
+        <section class="row">
+            <div class="col-1-8 xl-col-8-offset-1">
+                <div class="colNum teal"></div>
+            </div>
+            <div class="col-1-8 xl-col-8-offset-2">
+                <div class="colNum teal"></div>
+            </div>
+            <div class="col-1-8 xl-col-8-offset-2">
+                <div class="colNum teal"></div>
+            </div>
+        </section>
+        <h1>
             Other examples of possible behaviors
         </h1>
         <section class="row">
