A few small demo UI clean ups

--- a/Index.html
+++ b/Index.html
@@ -1218,7 +1218,7 @@
         </section>
     </section>
 
-    <section class="grid">
+    <section class="grid spec-tables">
         <section class="row">
             <h1>Media queries and column breakdown chart</h1>
             <table class="mediaQTable">
@@ -1318,52 +1318,52 @@
                 </tbody>
             </table>
             <h1>Column spanning currently supported</h1>
-            <table class="mediaQTable">
-                <thead>
-                    <tr>
-                        <th>Columns</th>
-                        <th>Spans</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th>1</th>
-                        <td>1</td>
-                    </tr>
-                    <tr>
-                        <th>2</th>
-                        <td>1</td>
-                    </tr>
-                    <tr>
-                        <th>3</th>
-                        <td>1, 2</td>
-                    </tr>
-                    <tr>
-                        <th>4</th>
-                        <td>1, 2, 3</td>
-                    </tr>
-                    <tr>
-                        <th>5</th>
-                        <td>1, 2, 3, 4</td>
-                    </tr>
-                    <tr>
-                        <th>6</th>
-                        <td>1, 2, 3, 4</td>
-                    </tr>
-                    <tr>
-                        <th>8</th>
-                        <td>1, 2, 4, 6</td>
-                    </tr>
-                    <tr>
-                        <th>12</th>
-                        <td>1, 2, 4</td>
-                    </tr>
-                    <tr>
-                        <th>16</th>
-                        <td>1, 2, 4, 8</td>
-                    </tr>
-                </tbody>
-            </table>
+                <table class="mediaQTable">
+                    <thead>
+                        <tr>
+                            <th>Columns</th>
+                            <th>Spans</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th>1</th>
+                            <td>1</td>
+                        </tr>
+                        <tr>
+                            <th>2</th>
+                            <td>1</td>
+                        </tr>
+                        <tr>
+                            <th>3</th>
+                            <td>1, 2</td>
+                        </tr>
+                        <tr>
+                            <th>4</th>
+                            <td>1, 2, 3</td>
+                        </tr>
+                        <tr>
+                            <th>5</th>
+                            <td>1, 2, 3, 4</td>
+                        </tr>
+                        <tr>
+                            <th>6</th>
+                            <td>1, 2, 3, 4</td>
+                        </tr>
+                        <tr>
+                            <th>8</th>
+                            <td>1, 2, 4, 6</td>
+                        </tr>
+                        <tr>
+                            <th>12</th>
+                            <td>1, 2, 4</td>
+                        </tr>
+                        <tr>
+                            <th>16</th>
+                            <td>1, 2, 4, 8</td>
+                        </tr>
+                    </tbody>
+                </table>
         </section>
     </section>
 
