--- a/Index.html
+++ b/Index.html
@@ -1142,6 +1142,26 @@
                 <div class="colNum teal"></div>
             </div>
         </section>
+
+        <h1>
+            Centered columns
+        </h1>
+        <section class="row">
+            <div class="col-1-4 centered">
+                <div class="colNum cyan"></div>
+            </div>
+        </section>
+        <section class="row">
+            <div class="col-1-3 centered">
+                <div class="colNum purple"></div>
+            </div>
+        </section>
+        <section class="row">
+            <div class="col-1-2 centered">
+                <div class="colNum pink"></div>
+            </div>
+        </section>
+
         <h1>
             Other examples of possible behaviors
         </h1>
