Fixed gridlines on homepage demo

--- a/HPDemo.html
+++ b/HPDemo.html
@@ -26,27 +26,82 @@
         <a href="Index.html">Main demo page</a>
     </header>
     <section class="gridlines outside">
-        <div class="gridlines inside">
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
-        </div>
-    </section>
-    <section class="grid">
-        <header></header>
+        <section class="grid">
+            <div class="row">
+                <div class="col-1-24">
+                    <div class="grid-bar-color"></div>
+                </div>
+                <div class="col-1-24">
+                    <div class="grid-bar-color"></div>
+                </div>
+                <div class="col-1-24">
+                    <div class="grid-bar-color"></div>
+                </div>
+                <div class="col-1-24">
+                    <div class="grid-bar-color"></div>
+                </div>
+                <div class="col-1-24">
+                    <div class="grid-bar-color"></div>
+                </div>
+                <div class="col-1-24">
+                    <div class="grid-bar-color"></div>
+                </div>
+                <div class="col-1-24">
+                    <div class="grid-bar-color"></div>
+                </div>
+                <div class="col-1-24">
+                    <div class="grid-bar-color"></div>
+                </div>
+                <div class="col-1-24">
+                    <div class="grid-bar-color"></div>
+                </div>
+                <div class="col-1-24">
+                    <div class="grid-bar-color"></div>
+                </div>
+                <div class="col-1-24">
+                    <div class="grid-bar-color"></div>
+                </div>
+                <div class="col-1-24">
+                    <div class="grid-bar-color"></div>
+                </div>
+                <div class="col-1-24">
+                    <div class="grid-bar-color"></div>
+                </div>
+                <div class="col-1-24">
+                    <div class="grid-bar-color"></div>
+                </div>
+                <div class="col-1-24">
+                    <div class="grid-bar-color"></div>
+                </div>
+                <div class="col-1-24">
+                    <div class="grid-bar-color"></div>
+                </div>
+                <div class="col-1-24">
+                    <div class="grid-bar-color"></div>
+                </div>
+                <div class="col-1-24">
+                    <div class="grid-bar-color"></div>
+                </div>
+                <div class="col-1-24">
+                    <div class="grid-bar-color"></div>
+                </div>
+                <div class="col-1-24">
+                    <div class="grid-bar-color"></div>
+                </div>
+                <div class="col-1-24">
+                    <div class="grid-bar-color"></div>
+                </div>
+                <div class="col-1-24">
+                    <div class="grid-bar-color"></div>
+                </div>
+                <div class="col-1-24">
+                    <div class="grid-bar-color"></div>
+                </div>
+                <div class="col-1-24">
+                    <div class="grid-bar-color"></div>
+                </div>
+            </div>
+        </section>
     </section>
     <section class="grid hero">
         <img src="img/hero.jpg"/>
