24 offset add to demo
Signed-off-by: Kyle Zinter <kylezinter@live.com>

--- a/Index.html
+++ b/Index.html
@@ -1251,6 +1251,17 @@
                 <div class="colNum teal"></div>
             </div>
         </section>
+                <section class="row">
+            <div class="col-1-24 m-col-24-offset-12 l-col-24-offset-5 xl-col-24-offset-10">
+                <div class="colNum teal"></div>
+            </div>
+            <div class="col-1-24 s-col-24-offset-7 m-col-24-offset-1 l-col-24-offset-3 xl-col-24-offset-8">
+                <div class="colNum teal"></div>
+            </div>
+            <div class="col-1-24 xs-col-24-offset-3 m-col-24-offset-2 l-col-24-offset-9 xl-col-24-offset-2">
+                <div class="colNum teal"></div>
+            </div>
+        </section>
 
         <h1>
             Centered columns
