--- a/Index.html
+++ b/Index.html
@@ -1535,7 +1535,7 @@
         </section>
     </section>
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.1.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-2.1.1.min.js"><\/script>')</script>
     <script src="js/plugins.js"></script>
     <script src="js/demo.js"></script>
