Removal of vertical spacing from the grid itself
This is to allow the content and authors to dictate vertical spacing as
appropriate for their own experiences.

--- a/Index.html
+++ b/Index.html
@@ -28,6 +28,16 @@
         <input type="button" value="Toggle grid background" class="gridBackgroundToggle" />
         <a href="HPDemo.html">Homepage demo</a>
     </header>
+    <section class="notes grid">
+        <div class="row">
+            <div class="col-1-1">
+                <h2>Notes</h2>
+                <ul>
+                    <li>There is no vertical spacing on the grid. Vertical spacing on rows here only for demo purposes to visually space out the color of different rows</li>
+                </ul>
+            </div>
+        </div>
+    </section>
     <section class="gridlines outside">
         <section class="grid">
             <div class="row">
@@ -1251,7 +1261,7 @@
                 <div class="colNum teal"></div>
             </div>
         </section>
-                <section class="row">
+        <section class="row">
             <div class="col-1-24 m-col-24-offset-12 l-col-24-offset-5 xl-col-24-offset-10">
                 <div class="colNum teal"></div>
             </div>
