--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <link rel="stylesheet" href="css/mscomGrid.css">
+    <link rel="stylesheet" href="css/mscomGrid-rtl.css">
     <link rel="stylesheet" href="css/demo/demo.css">
     <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
@@ -129,13 +129,13 @@
             <div class="col-1-2">
                 <div class="colNum pink">1/2</div>
                 <h2 class="text-center">
-                    Header two
+                    Header two 1
                 </h2>
             </div>
             <div class="col-1-2">
                 <div class="colNum pink">2/2</div>
                 <h2 class="text-center">
-                    Header two
+                    Header two 2
                 </h2>
             </div>
         </section>
@@ -144,13 +144,13 @@
             <div class="col-1-2 nb">
                 <div class="colNum pink">1/2</div>
                 <h2 class="text-center">
-                    Header two (No break)
+                    Header two (No break) 1
                 </h2>
             </div>
             <div class="col-1-2 nb">
                 <div class="colNum pink">2/2</div>
                 <h2 class="text-center">
-                    Header two (No break)
+                    Header two (No break) 2
                 </h2>
             </div>
         </section>
@@ -158,15 +158,15 @@
         <section class="row">
             <div class="col-1-3">
                 <div class="colNum purple">1/3</div>
-                <h3 class="text-center">Header three</h3>
+                <h3 class="text-center">Header three 1</h3>
             </div>
             <div class="col-1-3">
                 <div class="colNum purple">2/3</div>
-                <h3 class="text-center">Header three</h3>
+                <h3 class="text-center">Header three 2</h3>
             </div>
             <div class="col-1-3">
                 <div class="colNum purple">3/3</div>
-                <h3 class="text-center">Header three</h3>
+                <h3 class="text-center">Header three 3</h3>
             </div>
         </section>
 
