--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!-->
-<html class="no-js" dir="rtl">
+<html class="no-js" dir="ltr">
 <!--<![endif]-->
 <head>
     <meta charset="utf-8">
@@ -25,6 +25,7 @@
         <input type="button" value="Toggle gridlines" class="gridlinesToggle" />
         <input type="button" value="Toggle headers" class="headersToggle" />
         <input type="button" value="Toggle grid background" class="gridBackgroundToggle" />
+        <input type="button" value="Toggle RTL" class="rtlToggle" />
         <a href="HPDemo.html">Homepage demo</a>
     </header>
     <section class="notes ms-grid">
@@ -129,13 +130,13 @@
             <div class="col-1-2">
                 <div class="colNum pink">1/2</div>
                 <h2 class="text-center">
-                    Header two 1
+                    Header two
                 </h2>
             </div>
             <div class="col-1-2">
                 <div class="colNum pink">2/2</div>
                 <h2 class="text-center">
-                    Header two 2
+                    Header two
                 </h2>
             </div>
         </section>
@@ -144,13 +145,13 @@
             <div class="col-1-2 nb">
                 <div class="colNum pink">1/2</div>
                 <h2 class="text-center">
-                    Header two (No break) 1
+                    Header two (No break)
                 </h2>
             </div>
             <div class="col-1-2 nb">
                 <div class="colNum pink">2/2</div>
                 <h2 class="text-center">
-                    Header two (No break) 2
+                    Header two (No break)
                 </h2>
             </div>
         </section>
@@ -158,15 +159,15 @@
         <section class="ms-row">
             <div class="col-1-3">
                 <div class="colNum purple">1/3</div>
-                <h3 class="text-center">Header three 1</h3>
+                <h3 class="text-center">Header three</h3>
             </div>
             <div class="col-1-3">
                 <div class="colNum purple">2/3</div>
-                <h3 class="text-center">Header three 2</h3>
+                <h3 class="text-center">Header three</h3>
             </div>
             <div class="col-1-3">
                 <div class="colNum purple">3/3</div>
-                <h3 class="text-center">Header three 3</h3>
+                <h3 class="text-center">Header three</h3>
             </div>
         </section>
 
@@ -1288,6 +1289,39 @@
         <section class="ms-row">
             <div class="col-1-2 centered">
                 <div class="colNum pink"></div>
+            </div>
+        </section>
+
+        <h1>
+         RTL support
+        </h1>
+        <section class="ms-row" dir="rtl">
+            <div class="col-1-3 nb">
+                <div class="colNum purple">1/3</div>
+                <h3 class="text-center">Column 1</h3>
+            </div>
+            <div class="col-2-3 nb">
+                <div class="colNum purple">3/3</div>
+                <h3 class="text-center">Column 2</h3>
+            </div>
+        </section>
+
+        <section class="ms-row" dir="rtl">
+            <div class="col-1-4 ">
+                <div class="colNum cyan">1/4</div>
+                <h4 class="text-center">Column 1</h4>
+            </div>
+            <div class="col-1-4 ">
+                <div class="colNum cyan">2/4</div>
+                <h4 class="text-center">Column 2</h4>
+            </div>
+            <div class="col-1-4 ">
+                <div class="colNum cyan">3/4</div>
+                <h4 class="text-center">Column 3</h4>
+            </div>
+            <div class="col-1-4 ">
+                <div class="colNum cyan">4/4</div>
+                <h4 class="text-center">Column 4</h4>
             </div>
         </section>
 
