--- a/Index.html
+++ b/Index.html
@@ -1578,8 +1578,8 @@
         </section>
     </section>
 
-    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.1.js"></script>
-    <script>window.jQuery || document.write('<script src="js/vendor/jquery-2.1.1.min.js"><\/script>')</script>
+    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.11.1.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.1.min.js"><\/script>')</script>
     <script src="js/plugins.js"></script>
     <script src="js/demo.js"></script>
     <script src="js/mscom-grid.js"></script>
