--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <link rel="stylesheet" href="css/mscomGrid-rtl.css">
+    <link rel="stylesheet" href="css/mscomGrid-mixed.css">
     <link rel="stylesheet" href="css/demo/demo.css">
     <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
@@ -130,13 +130,13 @@
             <div class="col-1-2">
                 <div class="colNum pink">1/2</div>
                 <h2 class="text-center">
-                    Header two
+                    Header two 1
                 </h2>
             </div>
             <div class="col-1-2">
                 <div class="colNum pink">2/2</div>
                 <h2 class="text-center">
-                    Header two
+                    Header two 2
                 </h2>
             </div>
         </section>
@@ -145,13 +145,13 @@
             <div class="col-1-2 nb">
                 <div class="colNum pink">1/2</div>
                 <h2 class="text-center">
-                    Header two (No break)
+                    Header two (No break) 1
                 </h2>
             </div>
             <div class="col-1-2 nb">
                 <div class="colNum pink">2/2</div>
                 <h2 class="text-center">
-                    Header two (No break)
+                    Header two (No break) 2
                 </h2>
             </div>
         </section>
@@ -159,64 +159,64 @@
         <section class="ms-row">
             <div class="col-1-3">
                 <div class="colNum purple">1/3</div>
-                <h3 class="text-center">Header three</h3>
+                <h3 class="text-center">Header three 1</h3>
             </div>
             <div class="col-1-3">
                 <div class="colNum purple">2/3</div>
-                <h3 class="text-center">Header three</h3>
+                <h3 class="text-center">Header three 2</h3>
             </div>
             <div class="col-1-3">
                 <div class="colNum purple">3/3</div>
-                <h3 class="text-center">Header three</h3>
+                <h3 class="text-center">Header three 3</h3>
             </div>
         </section>
 
         <section class="ms-row">
             <div class="col-1-3 nb">
                 <div class="colNum purple">1/3</div>
-                <h3 class="text-center">Header three (no break)</h3>
+                <h3 class="text-center">Header three (no break) 1</h3>
             </div>
             <div class="col-2-3 nb">
                 <div class="colNum purple">3/3</div>
-                <h3 class="text-center">Header three (no break)</h3>
+                <h3 class="text-center">Header three (no break) 2</h3>
             </div>
         </section>
 
         <section class="ms-row">
             <div class="col-1-4 ">
                 <div class="colNum cyan">1/4</div>
-                <h4 class="text-center">Header four</h4>
+                <h4 class="text-center">Header four 1</h4>
             </div>
             <div class="col-1-4 ">
                 <div class="colNum cyan">2/4</div>
-                <h4 class="text-center">Header four</h4>
+                <h4 class="text-center">Header four 2</h4>
             </div>
             <div class="col-1-4 ">
                 <div class="colNum cyan">3/4</div>
-                <h4 class="text-center">Header four</h4>
+                <h4 class="text-center">Header four 3</h4>
             </div>
             <div class="col-1-4 ">
                 <div class="colNum cyan">4/4</div>
-                <h4 class="text-center">Header four</h4>
+                <h4 class="text-center">Header four 4</h4>
             </div>
         </section>
 
         <section class="ms-row">
             <div class="col-1-4 nb">
                 <div class="colNum cyan">1/4</div>
-                <h4 class="text-center">Header four</h4>
+                <h4 class="text-center">Header four 1</h4>
             </div>
             <div class="col-1-4 nb">
                 <div class="colNum cyan">2/4</div>
-                <h4 class="text-center">Header four</h4>
+                <h4 class="text-center">Header four 2</h4>
             </div>
             <div class="col-1-4 nb">
                 <div class="colNum cyan">3/4</div>
-                <h4 class="text-center">Header four</h4>
+                <h4 class="text-center">Header four 3</h4>
             </div>
             <div class="col-1-4 nb">
                 <div class="colNum cyan">4/4</div>
-                <h4 class="text-center">Header four</h4>
+                <h4 class="text-center">Header four 4</h4>
             </div>
         </section>
 
