Adjusting documentation/adding deployment script

--- a/Index.html
+++ b/Index.html
@@ -33,7 +33,8 @@
             <div class="col-1-1">
                 <h2>Notes</h2>
                 <ul>
-                    <li>There is no vertical spacing on the grid. Vertical spacing on rows here only for demo purposes to visually space out the color of different rows</li>
+                    <li>There is no vertical spacing on the grid by default. We have added vertical spacing on rows here only for demo purposes to visually space out the color of different rows</li>
+                    <li>Numbering next to some headers just added to show layout changes for LTR vs. RTL</li>
                 </ul>
             </div>
         </div>
